--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "c8ocaf",
-  "version": "1.0.5",
+  "version": "1.0.19",
   "description": "Convertigo Angular Framework",
   "main": "bundle/index.umd.js",
   "module": "src/index.js",
@@ -10,9 +10,8 @@
     "LICENCE"
   ],
   "scripts": {
-    "test": "karma start",
-    "test-watch": "karma start --singleRun=false --autoWatch=true --captureExceptions",
-    "prepublish": "npm run build",
+    "clean": "rimraf bundles coverage src/**/*.d.ts src/**/*.metadata.json src/**/*.js src/**/*.js.map src/**/*.ngsummary.json",
+    "prepublish": "ngc && npm run build",
     "build": "webpack && cp bundles/index.umd.js bundles/index.js"
   },
   "repository": {
@@ -22,28 +21,31 @@
   "keywords": [
     "TypeScript",
     "Angular 2",
+    "Angular",
     "Ionic 2",
     "Convertigo"
   ],
   "author": "Convertigo <info@convertigo.com> (http://www.convertigo.com/)",
   "license": "Apache-2.0",
   "dependencies": {
-    "@angular/common": "2.4.8",
-    "@angular/compiler": "2.4.8",
-    "@angular/compiler-cli": "2.4.8",
-    "@angular/core": "2.4.8",
-    "@angular/forms": "2.4.8",
-    "@angular/http": "2.4.8",
-    "@angular/platform-browser": "2.4.8",
-    "@angular/platform-browser-dynamic": "2.4.8",
-    "@angular/platform-server": "2.4.8",
-    "@ionic/storage": "2.0.0",
-    "ionic-angular": "2.2.0",
-    "ionic-native": "2.4.1",
+    "@angular/common": "4.0.0",
+    "@angular/compiler": "4.0.0",
+    "@angular/compiler-cli": "4.0.0",
+    "@angular/core": "4.0.0",
+    "@angular/forms": "4.0.0",
+    "@angular/http": "4.0.0",
+    "@angular/platform-browser": "4.0.0",
+    "@angular/platform-browser-dynamic": "4.0.0",
+    "@angular/platform-server": "4.0.0",
+    "zone.js": "0.8.4",
+    "rxjs": "5.1.1",
+    "@ionic/storage": "2.0.1",
+    "ionic-angular": "3.0.1",
+    "@ionic-native/core": "3.4.2",
+    "@ionic-native/splash-screen": "3.4.2",
+    "@ionic-native/status-bar": "3.4.2",
     "ionicons": "3.0.0",
-    "rxjs": "5.0.1",
-    "sw-toolbox": "3.4.0",
-    "zone.js": "0.7.2"
+    "sw-toolbox": "3.4.0"
   },
   "devDependencies": {
     "@types/hammerjs": "2.0.33",
@@ -57,16 +59,6 @@
     "core-js": "2.4.1",
     "cz-conventional-changelog": "1.2.0",
     "istanbul-instrumenter-loader": "0.2.0",
-    "jasmine-core": "2.5.2",
-    "karma": "1.3.0",
-    "karma-chrome-launcher": "2.0.0",
-    "karma-coverage": "1.1.1",
-    "karma-firefox-launcher": "^1.0.0",
-    "karma-jasmine": "1.0.2",
-    "karma-mocha-reporter": "^2.1.0",
-    "karma-remap-coverage": "0.1.2",
-    "karma-sourcemap-loader": "0.3.7",
-    "karma-webpack": "1.8.0",
     "loader-utils": "0.2.16",
     "reflect-metadata": "0.1.8",
     "semantic-release": "6.3.2",
@@ -75,10 +67,11 @@
     "tsify": "^1.0.7",
     "tslint": "4.0.2",
     "tslint-loader": "3.3.0",
-    "typescript": "2.0.10",
+    "typescript": "2.2.1",
     "typings": "^1.4.0",
     "webpack": "2.2.1",
-    "c8osdkangular2": "1.0.145"
+    "c8osdkangular2": "2.1.12",
+    "rimraf": "2.6.1"
   },
   "bugs": {
     "url": "https://github.com/convertigo/c8ocaf/issues"
