--- a/package.json
+++ b/package.json
@@ -1,18 +1,20 @@
 {
   "name": "c8ocaf",
-  "version": "1.0.20",
+  "version": "1.0.30-1",
   "description": "Convertigo Angular Framework",
   "main": "bundle/index.umd.js",
   "module": "src/index.js",
   "typings": "src/index.d.ts",
   "files": [
     "src/",
-    "LICENCE"
+    "LICENCE",
+    "tsconfig.json"
   ],
   "scripts": {
     "clean": "rimraf bundles coverage src/**/*.d.ts src/**/*.metadata.json src/**/*.js src/**/*.js.map src/**/*.ngsummary.json",
     "prepublish": "npm run clean && ngc && npm run build",
-    "build": "webpack && cp bundles/index.umd.js bundles/index.js"
+    "build": "webpack && cp bundles/index.umd.js bundles/index.js",
+    "build-dev" : "tsc -p ."
   },
   "repository": {
     "type": "git",
