--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "c8ocaf",
-  "version": "1.0.31",
+  "version": "1.0.32",
   "description": "Convertigo Angular Framework",
   "main": "bundle/index.umd.js",
   "module": "src/index.js",
@@ -72,7 +72,7 @@
     "typescript": "2.2.1",
     "typings": "^1.4.0",
     "webpack": "2.2.1",
-    "c8osdkangular2": "2.1.12",
+    "c8osdkangular": "2.1.15",
     "rimraf": "2.6.1"
   },
   "bugs": {
