--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "c8ocaf",
-  "version": "1.0.42",
+  "version": "1.0.43",
   "description": "Convertigo Angular Framework",
   "main": "bundle/index.umd.js",
   "module": "src/index.js",
@@ -30,26 +30,26 @@
   "author": "Convertigo <info@convertigo.com> (http://www.convertigo.com/)",
   "license": "Apache-2.0",
   "dependencies": {
-    "@angular/common": "4.0.2",
-    "@angular/compiler": "4.0.2",
-    "@angular/compiler-cli": "4.0.2",
-    "@angular/core": "4.0.2",
-    "@angular/forms": "4.0.2",
-    "@angular/http": "4.0.2",
-    "@angular/platform-browser": "4.0.2",
-    "@angular/platform-browser-dynamic": "4.0.2",
-    "@ionic-native/core": "3.6.1",
-    "@ionic-native/splash-screen": "3.6.1",
-    "@ionic-native/status-bar": "3.6.1",
+    "@angular/common": "4.1.2",
+    "@angular/compiler": "4.1.2",
+    "@angular/compiler-cli": "4.1.2",
+    "@angular/core": "4.1.2",
+    "@angular/forms": "4.1.2",
+    "@angular/http": "4.1.2",
+    "@angular/platform-browser": "4.1.2",
+    "@angular/platform-browser-dynamic": "4.1.2",
+    "@ionic-native/core": "3.10.2",
+    "@ionic-native/splash-screen": "3.10.2",
+    "@ionic-native/status-bar": "3.10.2",
     "@ionic/storage": "2.0.1",
-    "ionic-angular": "3.1.1",
+    "ionic-angular": "3.3.0",
     "ionicons": "3.0.0",
     "rxjs": "5.1.1",
-    "sw-toolbox": "3.4.0",
-    "zone.js": "^0.8.10"
+    "sw-toolbox": "3.6.0",
+    "zone.js": "0.8.11"
   },
   "devDependencies": {
-    "typescript": "~2.2.1",
+    "typescript": "2.3.3",
     "@types/hammerjs": "2.0.33",
     "@types/jasmine": "2.5.38",
     "@types/node": "6.0.52",
