--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@ionic-native/splash-screen": "3.10.2",
     "@ionic-native/status-bar": "3.10.2",
     "@ionic/storage": "2.0.1",
+    "angular2-oauth2": "^1.3.10",
     "ionic-angular": "3.4.2",
     "ionicons": "3.0.0",
     "rxjs": "5.4.0",
