upgrade to angular@4.4.3/Ionic@3.7.1

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "c8ocaf",
-  "version": "1.0.67",
+  "version": "1.0.69",
   "description": "Convertigo Angular Framework",
   "main": "bundle/index.umd.js",
   "module": "src/index.js",
@@ -30,49 +30,49 @@
   "author": "Convertigo <info@convertigo.com> (http://www.convertigo.com/)",
   "license": "Apache-2.0",
   "dependencies": {
-    "@angular/common": "4.1.3",
-    "@angular/compiler": "4.1.3",
-    "@angular/compiler-cli": "4.1.3",
-    "@angular/core": "4.1.3",
-    "@angular/forms": "4.1.3",
-    "@angular/http": "4.1.3",
-    "@angular/platform-browser": "4.1.3",
-    "@angular/platform-browser-dynamic": "4.1.3",
-    "@ionic-native/core": "3.12.1",
-    "@ionic-native/splash-screen": "3.12.1",
-    "@ionic-native/status-bar": "3.12.1",
+    "@angular/common": "4.4.3",
+    "@angular/compiler": "4.4.3",
+    "@angular/compiler-cli": "4.4.3",
+    "@angular/core": "4.4.3",
+    "@angular/forms": "4.4.3",
+    "@angular/http": "4.4.3",
+    "@angular/platform-browser": "4.4.3",
+    "@angular/platform-browser-dynamic": "4.4.3",
+    "ionic-angular": "3.7.1",
+    "rxjs": "5.4.3",
+    "zone.js": "0.8.18",
+    "@ionic-native/core": "4.3.1",
+    "@ionic-native/splash-screen": "4.3.1",
+    "@ionic-native/status-bar": "4.3.1",
     "@ionic/storage": "2.0.1",
-    "ionic-angular": "3.6.0",
     "ionicons": "3.0.0",
-    "rxjs": "5.4.0",
-    "sw-toolbox": "3.6.0",
-    "zone.js": "0.8.12"
+    "sw-toolbox": "3.6.0"
   },
   "devDependencies": {
+    "@types/jasmine": "2.5.52",
+    "awesome-typescript-loader": "3.1.3",
+    "codelyzer": "3.1.1",
+    "commitizen": "2.9.6",
+    "concurrently": "3.4.0",
+    "core-js": "2.4.1",
+    "istanbul-instrumenter-loader": "2.0.0",
+    "loader-utils": "1.1.0",
+    "reflect-metadata": "0.1.10",
+    "source-map-loader": "0.2.1",
+    "ts-helpers": "1.1.2",
+    "tsify": "3.0.1",
+    "tslint": "5.4.3",
+    "tslint-loader": "3.5.3",
+    "typings": "2.1.1",
+    "webpack": "3.0.0",
     "typescript": "2.3.4",
     "@types/hammerjs": "2.0.33",
-    "@types/jasmine": "2.5.38",
     "@types/node": "6.0.52",
-    "awesome-typescript-loader": "3.0.0-beta.17",
     "browserify": "^13.1.0",
-    "codelyzer": "2.0.0-beta.3",
-    "commitizen": "2.9.2",
-    "concurrently": "^3.0.0",
-    "core-js": "2.4.1",
     "cz-conventional-changelog": "1.2.0",
-    "istanbul-instrumenter-loader": "0.2.0",
-    "loader-utils": "0.2.16",
-    "reflect-metadata": "0.1.8",
+    "rimraf": "2.6.1",
     "semantic-release": "6.3.2",
-    "source-map-loader": "0.1.5",
-    "ts-helpers": "1.1.2",
-    "tsify": "^1.0.7",
-    "tslint": "4.0.2",
-    "tslint-loader": "3.3.0",
-    "typings": "^1.4.0",
-    "webpack": "2.2.1",
-    "c8osdkangular": "latest",
-    "rimraf": "2.6.1"
+    "c8osdkangular": "latest"
   },
   "bugs": {
     "url": "https://github.com/convertigo/c8ocaf/issues"
