--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "c8ocaf",
-  "version": "1.0.75",
+  "version": "1.0.76",
   "description": "Convertigo Angular Framework",
   "main": "bundle/index.umd.js",
   "module": "src/index.js",
@@ -30,15 +30,15 @@
   "author": "Convertigo <info@convertigo.com> (http://www.convertigo.com/)",
   "license": "Apache-2.0",
   "dependencies": {
-    "@angular/common": "4.4.3",
-    "@angular/compiler": "4.4.3",
-    "@angular/compiler-cli": "4.4.3",
-    "@angular/core": "4.4.3",
-    "@angular/forms": "4.4.3",
-    "@angular/http": "4.4.3",
-    "@angular/platform-browser": "4.4.3",
-    "@angular/platform-browser-dynamic": "4.4.3",
-    "ionic-angular": "3.7.1",
+    "@angular/common": "4.4.4",
+    "@angular/compiler": "4.4.4",
+    "@angular/compiler-cli": "4.4.4",
+    "@angular/core": "4.4.4",
+    "@angular/forms": "4.4.4",
+    "@angular/http": "4.4.4",
+    "@angular/platform-browser": "4.4.4",
+    "@angular/platform-browser-dynamic": "4.4.4",
+    "ionic-angular": "3.8.0",
     "rxjs": "5.4.3",
     "zone.js": "0.8.18",
     "@ionic-native/core": "4.3.1",
@@ -49,30 +49,30 @@
     "sw-toolbox": "3.6.0"
   },
   "devDependencies": {
+    "@types/hammerjs": "2.0.33",
     "@types/jasmine": "2.5.52",
+    "@types/node": "6.0.52",
     "awesome-typescript-loader": "3.1.3",
+    "browserify": "^13.1.0",
+    "c8osdkangular": "latest",
     "codelyzer": "3.1.1",
     "commitizen": "2.9.6",
     "concurrently": "3.4.0",
     "core-js": "2.4.1",
+    "cz-conventional-changelog": "1.2.0",
     "istanbul-instrumenter-loader": "2.0.0",
     "loader-utils": "1.1.0",
     "reflect-metadata": "0.1.10",
+    "rimraf": "2.6.1",
+    "semantic-release": "6.3.2",
     "source-map-loader": "0.2.1",
     "ts-helpers": "1.1.2",
     "tsify": "3.0.1",
     "tslint": "5.4.3",
     "tslint-loader": "3.5.3",
-    "typings": "2.1.1",
-    "webpack": "3.0.0",
     "typescript": "2.3.4",
-    "@types/hammerjs": "2.0.33",
-    "@types/node": "6.0.52",
-    "browserify": "^13.1.0",
-    "cz-conventional-changelog": "1.2.0",
-    "rimraf": "2.6.1",
-    "semantic-release": "6.3.2",
-    "c8osdkangular": "latest"
+    "typings": "2.1.1",
+    "webpack": "3.0.0"
   },
   "bugs": {
     "url": "https://github.com/convertigo/c8ocaf/issues"
