--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "c8ocaf",
-  "version": "1.0.79",
+  "version": "1.0.80",
   "description": "Convertigo Angular Framework",
   "main": "bundle/index.umd.js",
   "module": "src/index.js",
@@ -30,21 +30,21 @@
   "author": "Convertigo <info@convertigo.com> (http://www.convertigo.com/)",
   "license": "Apache-2.0",
   "dependencies": {
-    "@angular/common": "4.4.4",
-    "@angular/compiler": "4.4.4",
-    "@angular/compiler-cli": "4.4.4",
-    "@angular/core": "4.4.4",
-    "@angular/forms": "4.4.4",
-    "@angular/http": "4.4.4",
-    "@angular/platform-browser": "4.4.4",
-    "@angular/platform-browser-dynamic": "4.4.4",
-    "ionic-angular": "3.8.0",
-    "rxjs": "5.4.3",
+    "@angular/common": "5.0.0",
+    "@angular/compiler": "5.0.0",
+    "@angular/compiler-cli": "5.0.0",
+    "@angular/core": "5.0.0",
+    "@angular/forms": "5.0.0",
+    "@angular/http": "5.0.0",
+    "@angular/platform-browser": "5.0.0",
+    "@angular/platform-browser-dynamic": "5.0.0",
+    "@ionic/storage": "2.1.3",
+    "ionic-angular": "3.9.2",
+    "rxjs": "5.5.2",
     "zone.js": "0.8.18",
-    "@ionic-native/core": "4.3.1",
-    "@ionic-native/splash-screen": "4.3.1",
-    "@ionic-native/status-bar": "4.3.1",
-    "@ionic/storage": "2.0.1",
+    "@ionic-native/core": "4.3.3",
+    "@ionic-native/splash-screen": "4.3.3",
+    "@ionic-native/status-bar": "4.3.3",
     "ionicons": "3.0.0",
     "sw-toolbox": "3.6.0"
   },
@@ -70,9 +70,9 @@
     "tsify": "3.0.1",
     "tslint": "5.4.3",
     "tslint-loader": "3.5.3",
-    "typescript": "2.3.4",
     "typings": "2.1.1",
-    "webpack": "3.0.0"
+    "webpack": "3.0.0",
+    "typescript": "2.4.2"
   },
   "bugs": {
     "url": "https://github.com/convertigo/c8ocaf/issues"
