--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "c8ocaf",
-  "version": "1.0.86",
+  "version": "1.0.86-beta1",
   "description": "Convertigo Angular Framework",
   "main": "bundle/index.umd.js",
   "module": "src/index.js",
@@ -12,7 +12,7 @@
   ],
   "scripts": {
     "clean": "rimraf bundles coverage src/**/*.d.ts src/**/*.metadata.json src/**/*.js src/**/*.js.map src/**/*.ngsummary.json",
-    "prepublish": "npm run clean && ngc && npm run build",
+    "prepare": "npm run clean && ngc && npm run build",
     "build": "webpack && cp bundles/index.umd.js bundles/index.js",
     "build-dev": "tsc -p ."
   },
@@ -54,7 +54,7 @@
     "@types/node": "6.0.52",
     "awesome-typescript-loader": "3.1.3",
     "browserify": "^13.1.0",
-    "c8osdkangular": "latest",
+    "c8osdkangular": "2.1.55-beta13",
     "codelyzer": "3.1.1",
     "commitizen": "2.9.6",
     "concurrently": "3.4.0",
@@ -72,7 +72,7 @@
     "tslint-loader": "3.5.3",
     "typings": "2.1.1",
     "webpack": "3.0.0",
-    "typescript": "2.6.1"
+    "typescript": "2.4.2"
   },
   "bugs": {
     "url": "https://github.com/convertigo/c8ocaf/issues"
