--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "c8ocaf",
-  "version": "1.0.92",
+  "version": "1.0.93",
   "description": "Convertigo Angular Framework",
   "main": "bundle/index.umd.js",
   "module": "src/index.js",
@@ -38,15 +38,15 @@
     "@angular/http": "5.0.0",
     "@angular/platform-browser": "5.0.0",
     "@angular/platform-browser-dynamic": "5.0.0",
-    "@ionic/storage": "2.1.3",
-    "ionic-angular": "3.9.2",
-    "rxjs": "5.5.2",
-    "zone.js": "0.8.18",
     "@ionic-native/core": "4.3.3",
     "@ionic-native/splash-screen": "4.3.3",
     "@ionic-native/status-bar": "4.3.3",
+    "@ionic/storage": "2.1.3",
+    "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
-    "sw-toolbox": "3.6.0"
+    "rxjs": "5.5.2",
+    "sw-toolbox": "3.6.0",
+    "zone.js": "0.8.18"
   },
   "devDependencies": {
     "@types/hammerjs": "2.0.33",
