--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "c8ocaf",
-  "version": "1.0.101-beta102.10",
+  "version": "1.0.102",
   "description": "Convertigo Angular Framework",
   "main": "bundle/index.umd.js",
   "module": "src/index.js",
@@ -32,23 +32,23 @@
   "author": "Convertigo <info@convertigo.com> (http://www.convertigo.com/)",
   "license": "Apache-2.0",
   "dependencies": {
-    "@angular/common": "5.0.0",
-    "@angular/compiler": "5.0.0",
-    "@angular/compiler-cli": "5.0.0",
-    "@angular/core": "5.0.0",
-    "@angular/forms": "5.0.0",
-    "@angular/http": "5.0.0",
-    "@angular/platform-browser": "5.0.0",
-    "@angular/platform-browser-dynamic": "5.0.0",
-    "@ionic-native/core": "4.3.3",
-    "@ionic-native/splash-screen": "4.3.3",
-    "@ionic-native/status-bar": "4.3.3",
+    "@angular/common": "5.2.10",
+    "@angular/compiler": "5.2.10",
+    "@angular/compiler-cli": "5.2.10",
+    "@angular/core": "5.2.10",
+    "@angular/forms": "5.2.10",
+    "@angular/http": "5.2.10",
+    "@angular/platform-browser": "5.2.10",
+    "@angular/platform-browser-dynamic": "5.2.10",
+    "@ionic-native/core": "4.7.0",
+    "@ionic-native/splash-screen": "4.7.0",
+    "@ionic-native/status-bar": "4.7.0",
     "@ionic/storage": "2.1.3",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
-    "rxjs": "5.5.2",
+    "rxjs": "5.5.10",
     "sw-toolbox": "3.6.0",
-    "zone.js": "0.8.18",
+    "zone.js": "0.8.26",
     "lodash": "4.17.5"
   },
   "devDependencies": {
@@ -57,7 +57,7 @@
     "@types/node": "6.0.52",
     "awesome-typescript-loader": "3.1.3",
     "browserify": "^13.1.0",
-    "c8osdkangular": "2.1.61",
+    "c8osdkangular": "2.2.0",
     "codelyzer": "3.1.1",
     "commitizen": "2.9.6",
     "concurrently": "3.4.0",
@@ -75,7 +75,7 @@
     "tslint-loader": "3.5.3",
     "typings": "2.1.1",
     "webpack": "3.0.0",
-    "typescript": "2.4.2",
+    "typescript": "2.6.2",
     "typedoc": "0.11.1"
   },
   "bugs": {
