--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,8 +24,7 @@
     "src/caf/convertigo.base.ts",
     "src/caf/convertigo.page.ts",
     "src/caf/convertigo.router.ts",
-    "src/caf/convertigo.routingtable.ts",
-    "src/caf/convertigo.utils.ts"
+    "src/caf/convertigo.routingtable.ts"
   ],
   "exclude": [
     "node_modules",
