--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "c8ocaf",
-  "version": "1.1.7-beta3",
+  "version": "1.1.7-beta4",
   "description": "Convertigo Angular Framework",
   "main": "bundle/index.umd.js",
   "module": "src/index.js",
@@ -32,6 +32,7 @@
   "author": "Convertigo <info@convertigo.com> (http://www.convertigo.com/)",
   "license": "Apache-2.0",
   "dependencies": {
+    "@angular/animations": "5.2.11",
     "@angular/common": "5.2.11",
     "@angular/compiler": "5.2.11",
     "@angular/compiler-cli": "5.2.11",
@@ -40,15 +41,15 @@
     "@angular/http": "5.2.11",
     "@angular/platform-browser": "5.2.11",
     "@angular/platform-browser-dynamic": "5.2.11",
-    "@ionic-native/core": "4.7.0",
-    "@ionic-native/splash-screen": "4.7.0",
-    "@ionic-native/status-bar": "4.7.0",
-    "@ionic/storage": "2.1.3",
-    "ionic-angular": "3.9.2",
+    "@ionic-native/core": "~4.18.0",
+    "@ionic-native/splash-screen": "~4.18.0",
+    "@ionic-native/status-bar": "~4.18.0",
+    "@ionic/storage": "2.2.0",
+    "ionic-angular": "3.9.3",
     "ionicons": "3.0.0",
-    "rxjs": "5.5.10",
+    "rxjs": "6.3.3",
     "sw-toolbox": "3.6.0",
-    "zone.js": "0.8.26",
+    "zone.js": "0.8.29",
     "lodash": "4.17.5"
   },
   "devDependencies": {
