--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "c8ocaf",
-  "version": "1.1.7",
+  "version": "1.1.8-beta1",
   "description": "Convertigo Angular Framework",
   "main": "bundle/index.umd.js",
   "module": "src/index.js",
@@ -42,15 +42,16 @@
     "@angular/platform-browser": "5.2.11",
     "@angular/platform-browser-dynamic": "5.2.11",
     "@ionic-native/core": "~4.20.0",
+    "@ionic-native/native-page-transitions": "^4.20.0",
     "@ionic-native/splash-screen": "~4.20.0",
     "@ionic-native/status-bar": "~4.20.0",
     "@ionic/storage": "2.2.0",
     "ionic-angular": "3.9.5",
     "ionicons": "3.0.0",
+    "lodash": "4.17.11",
     "rxjs": "5.5.11",
     "sw-toolbox": "3.6.0",
-    "zone.js": "0.8.29",
-    "lodash": "4.17.11"
+    "zone.js": "0.8.29"
   },
   "devDependencies": {
     "@types/hammerjs": "2.0.33",
