--- a/angular.json
+++ b/angular.json
@@ -2,5 +2,86 @@
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
   "version": 1,
   "newProjectRoot": "projects",
-  "projects": {}
+  "projects": {
+    "c8osdk-angular-caf": {
+      "projectType": "library",
+      "root": "projects/c8osdk-angular-caf",
+      "sourceRoot": "projects/c8osdk-angular-caf/src",
+      "prefix": "lib",
+      "architect": {
+        "build": {
+          "builder": "@angular-devkit/build-ng-packagr:build",
+          "options": {
+            "tsConfig": "projects/c8osdk-angular-caf/tsconfig.lib.json",
+            "project": "projects/c8osdk-angular-caf/ng-package.json"
+          },
+          "configurations": {
+            "production": {
+              "tsConfig": "projects/c8osdk-angular-caf/tsconfig.lib.prod.json"
+            }
+          }
+        },
+        "test": {
+          "builder": "@angular-devkit/build-angular:karma",
+          "options": {
+            "main": "projects/c8osdk-angular-caf/src/test.ts",
+            "tsConfig": "projects/c8osdk-angular-caf/tsconfig.spec.json",
+            "karmaConfig": "projects/c8osdk-angular-caf/karma.conf.js"
+          }
+        },
+        "lint": {
+          "builder": "@angular-devkit/build-angular:tslint",
+          "options": {
+            "tsConfig": [
+              "projects/c8osdk-angular-caf/tsconfig.lib.json",
+              "projects/c8osdk-angular-caf/tsconfig.spec.json"
+            ],
+            "exclude": [
+              "**/node_modules/**"
+            ]
+          }
+        }
+      }
+    },
+    "c8ocaf": {
+      "projectType": "library",
+      "root": "projects/c8ocaf",
+      "sourceRoot": "projects/c8ocaf/src",
+      "prefix": "lib",
+      "architect": {
+        "build": {
+          "builder": "@angular-devkit/build-ng-packagr:build",
+          "options": {
+            "tsConfig": "projects/c8ocaf/tsconfig.lib.json",
+            "project": "projects/c8ocaf/ng-package.json"
+          },
+          "configurations": {
+            "production": {
+              "tsConfig": "projects/c8ocaf/tsconfig.lib.prod.json"
+            }
+          }
+        },
+        "test": {
+          "builder": "@angular-devkit/build-angular:karma",
+          "options": {
+            "main": "projects/c8ocaf/src/test.ts",
+            "tsConfig": "projects/c8ocaf/tsconfig.spec.json",
+            "karmaConfig": "projects/c8ocaf/karma.conf.js"
+          }
+        },
+        "lint": {
+          "builder": "@angular-devkit/build-angular:tslint",
+          "options": {
+            "tsConfig": [
+              "projects/c8ocaf/tsconfig.lib.json",
+              "projects/c8ocaf/tsconfig.spec.json"
+            ],
+            "exclude": [
+              "**/node_modules/**"
+            ]
+          }
+        }
+      }
+    }},
+  "defaultProject": "c8osdk-angular-caf"
 }
