--- a/projects/c8ocaf/package.json
+++ b/projects/c8ocaf/package.json
@@ -2,17 +2,16 @@
   "name": "c8ocaf",
   "version": "2.0.0-beta3",
   "peerDependencies": {
-    "@angular/common": "~8.2.14",
-    "@angular/core": "~8.2.14",
-    "@angular/forms": "~8.2.14",
-    "@angular/platform-browser": "~8.2.14",
-    "@angular/platform-browser-dynamic": "~8.2.14",
-    "@angular/router": "~8.2.14",
-    "@capacitor/core": "2.0.1",
-    "@ionic-native/core": "^5.0.7",
-    "@ionic-native/splash-screen": "^5.0.0",
-    "@ionic-native/status-bar": "^5.0.0",
-    "@ionic/angular": "^5.0.0",
+    "@angular/common": ">= 8.0.0 < 10.0.0",
+    "@angular/core": ">= 8.0.0 < 10.0.0",
+    "@angular/forms": ">= 8.0.0 < 10.0.0",
+    "@angular/platform-browser": ">= 8.0.0 < 10.0.0",
+    "@angular/platform-browser-dynamic": ">= 8.0.0 < 10.0.0",
+    "@angular/router": ">= 8.0.0 < 10.0.0",
+    "@ionic-native/core": ">= 5.0.0",
+    "@ionic-native/splash-screen": ">= 5.0.0",
+    "@ionic-native/status-bar": ">= 5.0.0",
+    "@ionic/angular": ">= 5.0.0",
     "core-js": "^2.5.4",
     "rxjs": "~6.5.1",
     "tslib": "^1.9.0",
