--- a/projects/c8ocaf/package.json
+++ b/projects/c8ocaf/package.json
@@ -1,6 +1,6 @@
 {
   "name": "c8ocaf",
-  "version": "2.0.0-beta4",
+  "version": "2.0.0-beta6",
   "peerDependencies": {
     "@angular/common": ">= 8.0.0 < 10.0.0",
     "@angular/core": ">= 8.0.0 < 10.0.0",
@@ -15,8 +15,10 @@
     "core-js": "^2.5.4",
     "rxjs": "~6.5.1",
     "tslib": "^1.9.0",
-    "zone.js": "~0.9.1",
-    "lodash":"4.17.12"
+    "zone.js": "~0.9.1"
+  },
+  "dependencies": {
+    "lodash":"4.17.15"
   },
   "devDependencies": {
     "@ionic/angular": "^5.0.0",
