--- a/projects/c8ocaf/package.json
+++ b/projects/c8ocaf/package.json
@@ -15,9 +15,7 @@
     "core-js": "^2.5.4",
     "rxjs": "~6.5.1",
     "tslib": "^1.9.0",
-    "zone.js": "~0.9.1"
-  },
-  "dependencies": {
+    "zone.js": "~0.9.1",
     "lodash":"4.17.15"
   },
   "devDependencies": {
