--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "c8ocaf",
-  "version": "1.1.14",
+  "version": "1.1.15-beta1",
   "description": "Convertigo Angular Framework",
   "main": "bundle/index.umd.js",
   "module": "src/index.js",
@@ -77,6 +77,7 @@
     "typings": "2.1.1",
     "webpack": "3.0.0",
     "typescript": "2.6.2",
+    "@types/node": "12.12.6",
     "typedoc": "0.11.1"
   },
   "bugs": {
