--- a/projects/c8ocaf/package.json
+++ b/projects/c8ocaf/package.json
@@ -2,12 +2,12 @@
     "name": "c8ocaf",
     "version": "2.0.0-beta9",
     "peerDependencies": {
-        "@angular/common": ">= 8.0.0 < 10.0.0",
-        "@angular/core": ">= 8.0.0 < 10.0.0",
-        "@angular/forms": ">= 8.0.0 < 10.0.0",
-        "@angular/platform-browser": ">= 8.0.0 < 10.0.0",
-        "@angular/platform-browser-dynamic": ">= 8.0.0 < 10.0.0",
-        "@angular/router": ">= 8.0.0 < 10.0.0",
+        "@angular/common": ">= 8.0.0",
+        "@angular/core": ">= 8.0.0",
+        "@angular/forms": ">= 8.0.0",
+        "@angular/platform-browser": ">= 8.0.0",
+        "@angular/platform-browser-dynamic": ">= 8.0.0",
+        "@angular/router": ">= 8.0.0",
         "@ionic-native/core": ">= 5.0.0",
         "@ionic-native/splash-screen": ">= 5.0.0",
         "@ionic-native/status-bar": ">= 5.0.0",
