--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # See http://help.github.com/ignore-files/ for more about ignoring files.
-
+/src
 # compiled output
+/bundles
 /dist
 /tmp
 /out-tsc
