--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "c8osdk-angular-caf",
   "version": "0.0.0",
+  "license": "Apache-2.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
