--- a/projects/c8ocaf/package.json
+++ b/projects/c8ocaf/package.json
@@ -1,5 +1,6 @@
 {
   "name": "c8ocaf",
+  "license": "Apache-2.0",
   "version": "2.0.1",
   "peerDependencies": {
     "@angular/core": "=> 13.0.0",
