--- a/projects/c8ocaf/package.json
+++ b/projects/c8ocaf/package.json
@@ -3,7 +3,7 @@
   "author": "Charles GRIMONT",
   "description": "Convertigo Angular Framework",
   "license": "Apache-2.0",
-  "version": "2.0.4",
+  "version": "2.0.5",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/convertigo/c8osdk-angular-caf"
@@ -13,7 +13,7 @@
     "@angular/core": ">= 13.0.0",
     "@angular/router":">= 13.0.0",
     "@angular/platform-browser":">= 13.0.0",
-    "c8osdkangular": ">= 4.0.16-beta53",
+    "c8osdkangular": ">= 4.0.17",
     "@ionic/angular": ">= 6.0.0",
     "lodash":"4.17.21"
   },
@@ -24,7 +24,7 @@
     "@angular/core": "^13.2.0",
     "@angular/router":"^13.2.0",
     "@angular/platform-browser":"^13.2.0",
-    "c8osdkangular": "4.0.16-beta53",
+    "c8osdkangular": "4.0.17",
     "@ionic/angular": "6.0.0"
   }
 }
