--- a/projects/c8ocaf/package.json
+++ b/projects/c8ocaf/package.json
@@ -15,7 +15,7 @@
     "@angular/platform-browser":">= 13.0.0",
     "c8osdkangular": ">= 4.0.17",
     "@ionic/angular": ">= 6.0.0",
-    "lodash":"4.17.21"
+    "lodash":">= 4.17.20"
   },
   "dependencies": {
     "tslib": "^2.3.0"
