--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "@angular/router": "~13.2.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.11.4"
+    "zone.js": "~0.11.4",
+    "lodash-es": "^4.17.21"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~13.2.2",
