--- a/projects/c8ocaf/package.json
+++ b/projects/c8ocaf/package.json
@@ -3,7 +3,7 @@
   "author": "Charles GRIMONT",
   "description": "Convertigo Angular Framework",
   "license": "Apache-2.0",
-  "version": "2.0.11-beta3",
+  "version": "2.0.13-beta1",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/convertigo/c8osdk-angular-caf"
@@ -11,20 +11,21 @@
   "homepage": "https://www.convertigo.com/",
   "peerDependencies": {
     "@angular/core": ">= 13.0.0",
-    "@angular/router":">= 13.0.0",
-    "@angular/platform-browser":">= 13.0.0",
-    "c8osdkangular": ">= 4.0.17",
+    "@angular/platform-browser": ">= 13.0.0",
+    "@angular/router": ">= 13.0.0",
     "@ionic/angular": ">= 6.0.0",
-    "lodash":">= 4.17.20"
+    "c8osdkangular": ">= 4.0.17",
+    "lodash-es": ">= 4.17.20"
   },
   "dependencies": {
     "tslib": "^2.3.0"
   },
   "devDependencies": {
     "@angular/core": "^13.2.0",
-    "@angular/router":"^13.2.0",
-    "@angular/platform-browser":"^13.2.0",
-    "c8osdkangular": "4.0.17",
-    "@ionic/angular": "6.0.0"
+    "@angular/platform-browser": "^13.2.0",
+    "@angular/router": "^13.2.0",
+    "@ionic/angular": "6.0.0",
+    "@types/lodash-es": "^4.17.10",
+    "c8osdkangular": "4.0.17"
   }
 }
